[project]
name = "vec-graph-db"
version = "0.1.0"
description = ""
authors = [
    {name = "Sleepyday",email = "107453007+flyingsalsa@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
