[project]
name = "vec-graph-db"
version = "0.1.0"
description = ""
authors = [
    {name = "Sleepyday",email = "107453007+flyingsalsa@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymilvus (>=2.5.10,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "neo4j (>=5.28.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "vec_graph_db", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
